fix  scrollbar

--- a/css/responseve.css
+++ b/css/responseve.css
@@ -2,6 +2,23 @@
   .ecosystem_list{
     overflow-x: scroll;
   }
+  #scrollbar::-webkit-scrollbar {
+    height: 5px;
+    width: 14px;   
+    display: none;
+  } 
+  body::-webkit-scrollbar-track {
+    background: #ccc;        /* Màu nền ngoài của thanh scrollbar */
+  }
+  #scrollbar::-webkit-scrollbar-thumb {
+    background-color: var(--blue-1);    /* Màu của thanh cuộn (scroll thumb) */
+    border-radius: 5px;       /* Bo góc scroll thumb */
+    border: 2px solid #ccc;  /* Không hỗ trợ padding, margin, transition nên dùng viền cùng màu nên để padding scroll thumb */
+  }
+  #scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: var(--blue-color); /* Hiệu ứng di chuột đổi màu*/
+  }
+
 }
 @media (min-width: 0px) and (max-width: 1024px) {
   .mbscreen {
